feat(java): 添加虚拟线程并新增3D打印大小计算接口