@@ -4,7 +4,6 @@ import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import com.sun.net.httpserver.HttpServer;
 
@@ -19,20 +18,7 @@ public class WebServer {
     private static volatile HttpServer server;
     private static volatile boolean isRunning = false;
 
-    private static ThreadFactory threadFactory = new ThreadFactory() {
-
-        private final AtomicInteger count = new AtomicInteger(0);
-
-        @Override
-        public Thread newThread(Runnable r) {
-            Thread t = new Thread(r);
-            t.setName("http-worker-" + count.incrementAndGet());
-            t.setDaemon(false);
-            return t;
-        }
-    };
-
-    public static void start(int port, int nThreads) {
+    public static void start(int port, int nThreads, boolean useVirtualThreads) {
         if (isRunning) {
             MyMod.LOG.warn("[WebServer] Server is already running!");
             return;
@@ -48,7 +34,20 @@ public class WebServer {
 
             server = HttpServer.create(new InetSocketAddress(port), 0);
             registerRoutes();
-            server.setExecutor(Executors.newFixedThreadPool(nThreads, threadFactory));
+            if (useVirtualThreads) {
+                MyMod.LOG.info("[WebServer] Using virtual threads executor");
+                final ThreadFactory virtualThreadFactory = Thread.ofVirtual()
+                    .name("http-virtual-", 1)
+                    .factory();
+                server.setExecutor(Executors.newThreadPerTaskExecutor(virtualThreadFactory));
+            } else {
+                MyMod.LOG.info("[WebServer] Using fixed thread pool with {} threads", nThreads);
+                final ThreadFactory threadFactory = Thread.ofPlatform()
+                    .name("http-workers-", 1)
+                    .daemon(false)
+                    .factory();
+                server.setExecutor(Executors.newFixedThreadPool(nThreads, threadFactory));
+            }
             server.start();
             isRunning = true;
 
